remove the font and color in fix dark mode

--- a/app/globals.css
+++ b/app/globals.css
@@ -14,17 +14,9 @@
   --default-hover: 172 66% 37%;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
-
 body {
   color: var(--foreground);
   background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
 }
 
 @layer utilities {
